# MATSim_Custom

./: .gitignore  README.md  README_VI.md  build.gradle.kts  settings.gradle.kts
.agent/workflows/: update-readme.md
.github/workflows/: auto-tag.yml  release.yml
.run/: Analysis.run.xml  ArrowConverter.run.xml  MainKt (Analysis).run.xml  MainKt.run.xml  ScoringRunner.run.xml  SimpleRunner.run.xml
data/config/: config.yaml  config_v1.yaml  config_v2_kotlin.yaml  config_v2_old.yaml
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/com/thomas/pt/: Main.kt
src/main/kotlin/com/thomas/pt/core/: Analysis.kt  ArrowToCSV.kt  RunMatsim.kt  SimpleMATSimRunner.kt  SimpleRunMatsim.kt  Simulation.kt
src/main/kotlin/com/thomas/pt/db/: DuckDBManager.kt
src/main/kotlin/com/thomas/pt/event/: BusDelayHandler.kt  BusPassengerHandler.kt  LinkEventHandler.kt  QBusPassagerHandler.kt  QDelayHandler.kt  QTripHandler.kt  TripHandler.kt
src/main/kotlin/com/thomas/pt/scoring/: BusNetScoreCalculator.kt  ScoringRecords.kt  ScoringWeights.kt
src/main/kotlin/com/thomas/pt/utility/: Utility.kt
src/main/python/out_process/: bus_data_WorkBank.py  bus_line_data_raw.py  demo_outputProcessor.py  link_perfomance_per_vehicle.py  output_Processor.py
src/main/python/scoring/: MATSimExtractor.py  MATSimExtractorV2.py  MATSimProcessor.py  README.md  los.py  pyproject.toml  utility.py
src/main/python/test/: compare_csv.py  los_post_processing.py  pipeline_test.py  score_test.py
src/main/resources/: log4j2.xml
src/test/kotlin/: TestArrow.kt
(+71 files in other folders)
